--- a/assets/css/parallax.css
+++ b/assets/css/parallax.css
@@ -42,32 +42,32 @@ h3 {
 
 /* line 40, ../../xampp/htdocs/ResolveSystemsOnLine/scss/parallax.scss */
 .imagem1 {
-  background-image: url(../img/fotos/imagem1.jpg);
+  background-image: url(../../img/fotos/imagem1.jpg);
 }
 
 /* line 44, ../../xampp/htdocs/ResolveSystemsOnLine/scss/parallax.scss */
 .imagem2 {
-  background-image: url(../img/fotos/imagem2.jpg);
+  background-image: url(../../img/fotos/imagem2.jpg);
 }
 
 /* line 48, ../../xampp/htdocs/ResolveSystemsOnLine/scss/parallax.scss */
 .imagem3 {
-  background-image: url(../img/fotos/imagem3.jpg);
+  background-image: url(../../img/fotos/imagem3.jpg);
 }
 
 /* line 52, ../../xampp/htdocs/ResolveSystemsOnLine/scss/parallax.scss */
 .imagem4 {
-  background-image: url(../img/fotos/imagem4.jpg);
+  background-image: url(../../img/fotos/imagem4.jpg);
 }
 
 /* line 56, ../../xampp/htdocs/ResolveSystemsOnLine/scss/parallax.scss */
 .imagem5 {
-  background-image: url(../img/fotos/imagem5.jpg);
+  background-image: url(../../img/fotos/imagem5.jpg);
 }
 
 /* line 60, ../../xampp/htdocs/ResolveSystemsOnLine/scss/parallax.scss */
 .imagem6 {
-  background-image: url(../img/fotos/imagem6.jpg);
+  background-image: url(../../img/fotos/imagem6.jpg);
 }
 
 /* line 64, ../../xampp/htdocs/ResolveSystemsOnLine/scss/parallax.scss */
