--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -539,4 +539,17 @@ input[type=range]:focus::-ms-fill-upper {
   right: 0;
 }
 
+/* line 478, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.bg-formatura {
+  background-image: url(../../img/portifolio/formatura/moldura.jpg);
+  position: sticky;
+  height: 100%;
+  min-height: 500px;
+  opacity: 0.7;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
 /*# sourceMappingURL=style.css.map */
