--- a/scss/style.scss
+++ b/scss/style.scss
@@ -470,3 +470,20 @@ input[type=range] {
   .flipswitch-cb:checked + .flipswitch-label .flipswitch-switch {
 	right: 0;
   }
+
+
+  // PORTIFÓLIO
+  // Formatura
+
+  .bg-formatura {
+	background-image: url(../../img/portifolio/formatura/moldura.jpg);
+	position: sticky;
+	height: 100%;
+	min-height: 500px;
+	opacity: 0.7;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;	
+
+  }
