--- a/scss/parallax.scss
+++ b/scss/parallax.scss
@@ -38,27 +38,27 @@ h3 {
 }
 
 .imagem1 {
-	background-image: url(../img/fotos/imagem1.jpg);
+	background-image: url(../../img/fotos/imagem1.jpg);
 }
 
 .imagem2 {
-	background-image: url(../img/fotos/imagem2.jpg);
+	background-image: url(../../img/fotos/imagem2.jpg);
 }
 
 .imagem3 {
-	background-image: url(../img/fotos/imagem3.jpg);
+	background-image: url(../../img/fotos/imagem3.jpg);
 }
 
 .imagem4 {
-	background-image: url(../img/fotos/imagem4.jpg);
+	background-image: url(../../img/fotos/imagem4.jpg);
 }
 
 .imagem5 {
-	background-image: url(../img/fotos/imagem5.jpg);
+	background-image: url(../../img/fotos/imagem5.jpg);
 }
 
 .imagem6 {
-	background-image: url(../img/fotos/imagem6.jpg);
+	background-image: url(../../img/fotos/imagem6.jpg);
 }
 
 .conteudo-titulo {
