--- a/scss/style.scss
+++ b/scss/style.scss
@@ -241,13 +241,11 @@ h3.madelina {
 	color: #5c5c5c;
 }
 
-a.link-index {	
+a.link-index,
+a.link-no-line {	
 	text-decoration: none;	
 }
 
-#container-ofertas {
-	
-}
 
 .plano {
 	box-shadow: 8px 8px 10px -3px #007bffb3;
