--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,6 +21,10 @@
 	.carousel-item {
 		height: 650px;
 	}
+
+	.espaco-pre-footer {
+		height: 150px;
+	}
 }
 
 /*Extra small devices (portrait phones, menor que 576px)*/
@@ -39,6 +43,10 @@
 	.conteudo {
 		padding-bottom: 75px;
 	}	
+
+	.espaco-pre-footer {
+		height: 150px;
+	}
 }
 
 /*Small devices (landscape phones, 576px e maiores)*/
@@ -419,111 +427,7 @@ div.font-reduzida {
 	font-size: 30px;
 }
 
-// RANGE
-/*input[type=range] {
-	height: 28px;
-	-webkit-appearance: none;
-	margin: 10px 0;
-	width: 100%;
-}
-
-input[type=range]:focus {
-	outline: none;
-}
-
-input[type=range]::-webkit-slider-runnable-track {
-	width: 100%;
-	height: 20px;
-	cursor: pointer;
-	animate: 0.2s;
-	box-shadow: 0px 0px 0px #002200;
-	background: #999999;
-	border-radius: 20px;
-	border: 0px solid #28A745;
-}
-
-input[type=range]::-webkit-slider-thumb {
-	box-shadow: 0px 0px 0px #001700;
-	border: 2px solid #85E886;
-	height: 20px;
-	width: 50px;
-	border-radius: 20px;
-	background: #28A745;
-	cursor: pointer;
-	-webkit-appearance: none;
-	margin-top: -1px;
-}
-
-input[type=range]:focus::-webkit-slider-runnable-track {
-	background: #999999;
-}
-
-input[type=range]::-moz-range-track {
-	width: 100%;
-	height: 20px;
-	cursor: pointer;
-	animate: 0.2s;
-	box-shadow: 0px 0px 0px #002200;
-	background: #999999;
-	border-radius: 20px;
-	border: 0px solid #28A745;
-}
-
-input[type=range]::-moz-range-thumb {
-	box-shadow: 0px 0px 0px #001700;
-	border: 2px solid #85E886;
-	height: 20px;
-	width: 50px;
-	border-radius: 20px;
-	background: #28A745;
-	cursor: pointer;
-}
-
-input[type=range]::-ms-track {
-	width: 100%;
-	height: 20px;
-	cursor: pointer;
-	animate: 0.2s;
-	background: transparent;
-	border-color: transparent;
-	color: transparent;
-}
-
-input[type=range]::-ms-fill-lower {
-	background: #999999;
-	border: 0px solid #28A745;
-	border-radius: 40px;
-	box-shadow: 0px 0px 0px #002200;
-}
-
-input[type=range]::-ms-fill-upper {
-	background: #999999;
-	border: 0px solid #28A745;
-	border-radius: 40px;
-	box-shadow: 0px 0px 0px #002200;
-}
-
-input[type=range]::-ms-thumb {
-	margin-top: 1px;
-	box-shadow: 0px 0px 0px #001700;
-	border: 2px solid #85E886;
-	height: 20px;
-	width: 50px;
-	border-radius: 20px;
-	background: #28A745;
-	cursor: pointer;
-}
-
-input[type=range]:focus::-ms-fill-lower {
-	background: #999999;
-}
-
-input[type=range]:focus::-ms-fill-upper {
-	background: #999999;
-}
-*/
 // FLIPSWITCH
-
 .flipswitch {
 	position: relative;
 	width: 127px;
@@ -617,3 +521,16 @@ body.bg-formatura {
 	color: #a71e47;
 }
 
+// FALE CONOSCO
+.font-size-20 {
+	font-size: 20px;
+}
+
+.font-size-25 {
+	font-size: 25px;
+}
+
+textarea {
+	overflow: hidden;
+	resize: none;
+}
